--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="sampatti_logo.jpg" />
+    <link rel="icon" type="image/svg+xml" href="KOSH KALYAN_logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KoshKalyan</title>
   </head>
